[package]
name = "k8s-urls"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
kube = { version = "0.88", features = ["runtime"] }
k8s-openapi = { version = "0.21", features = ["v1_29"] }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
regex = "1.10"
